@@ -39,6 +39,7 @@ export(getManifest, getProbeInfo, getManifestInfo,
        normalize.illumina.control, bgcorrect.illumina,
        preprocessRaw, preprocessIllumina,
        preprocessSWAN, preprocessQuantile,
+       preprocessFunnorm,
        RGChannelSet, RGChannelSetExtended,
        MethylSet, RatioSet,
        GenomicMethylSet, GenomicRatioSet,
